--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,11 +44,12 @@
           <ul class="dropdown-menu">
             <li><a href="#">High To Low</a></li>
             <li><a href="#">Low To High</a></li>
-            <li><a href="#">By Name</a></li>
-            <li class="divider"></li>
+            <li><a href="#">By Task Name</a></li>
+            <li><a href="#">By User Name</a></li>
+            <!--<li class="divider"></li>
             <li class="dropdown-header">Nav header</li>
             <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">One more separated link</a></li>-->
           </ul>
         </li>
       </ul>
