--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,8 +60,10 @@
     </div><!--/.nav-collapse -->
   </div>
 </div>
+<div class="container">
+  <%= yield %>
+</div>
 
-<%= yield %>
 
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
