--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -14,31 +14,30 @@
 
       <div class="field">
         <%= f.label :title %><br>
-        <!--%= f.text_field :title %-->
-        <textarea type="text" class="form-control" required autofocus></textarea>
+        <textarea type="text" name="task[title]" class="form-control" required autofocus></textarea>
       </div>
       <div class="field" class="width-size2">
         <%= f.label :priority %><br>
-        <select name="q1" class="form-control"  >
-          <option value="1">ASAP</option>
-          <option value="2">Medium</option>
-          <option value="3">Take your time</option>
+        <select name="task[priority]" class="form-control"  >
+          <option value="ASAP">ASAP</option>
+          <option value="Medium">Medium</option>
+          <option value="Take your time">Take your time</option>
         </select>
-        <!-- f.text_field :priority %-->
+
       </div>
       <div class="field">
         <%= f.label :description %><br>
-        <!--%= f.text_area :description %-->
-        <textarea type="text" name="Task Description:" class="form-control" required></textarea>
+
+        <textarea type="text" name="task[description]" class="form-control" required></textarea>
       </div>
       <div class="field">
         <%= f.label :status %><br>
-        <select name="q2" class="form-control"  >
-          <option value="1">TODO</option>
-          <option value="2">DOING</option>
-          <option value="3">DONE</option>
+        <select name="task[status]" class="form-control"  >
+          <option value="TODO">TODO</option>
+          <option value="DOING">DOING</option>
+          <option value="DONE">DONE</option>
         </select>
-        <!--%= f.text_field :status %-->
+
       </div>
       <div class="field">
         <%= f.label :due_date %><br>
