--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,9 +11,10 @@
  *= require_self
  *= require_tree .
  */
-body{
-    padding-top: 40px;
-}
-#notice{
+
+#notice, .notice{
     padding-top: 20px;
+}
+#login_status{
+    padding-top: 40px;
 }
