--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -19,9 +19,9 @@
       <div class="field" class="width-size2">
         <%= f.label :priority %><br>
         <select name="task[priority]" class="form-control"  >
-          <option value="ASAP">ASAP</option>
+          <option value="ASAP">High</option>
           <option value="Medium">Medium</option>
-          <option value="Take your time">Take your time</option>
+          <option value="Take your time">Low</option>
         </select>
 
       </div>
