--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
 
   <!-- Custom styles for this template -->
   <%= stylesheet_link_tag "site.css" %>
+
+  <%= stylesheet_link_tag "bootstrap.min.css" %>
   <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -32,11 +34,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <div class="navbar-brand">
+        <a class="navbar-collapse" href="/projects">Project Name </a>
+      </div>
     </div>
     <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><%= link_to 'TODO', tasks_path %></li>
+      <ul class="nav nav-pills navbar-text">
+        <li><%= link_to 'TODO', tasks_path %></li>
         <li><%= link_to 'DOING', tasks_path %></li>
         <li><%= link_to 'DONE', tasks_path %></li>
         <li class="dropdown">
