--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,20 @@
-<div class="page-header">
-  <h1>Listing tasks</h1>
-</div>
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+  <style>
 
+      h1 {text-align:center;font-family: 'Nixie One', cursive;}
+      body {
+          font-family: 'Varela Round', sans-serif;
+          font-size: 14px;
+      }
+  </style>
+</head>
 
-<table>
+<body>
+<h1 class="page-header">My Tasks</h1>
+
+<div class="table-responsive">
+<table class="table table-striped">
   <thead>
   <tr>
     <th>Title</th>
@@ -37,7 +48,9 @@
   <% end %>
   </tbody>
 </table>
-
+</div>
 <br>
 
 <%= link_to 'New Task', new_task_path %>
+
+</body>
