--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,14 @@
   <!-- Custom styles for this template -->
   <%= stylesheet_link_tag "site.css" %>
   <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+  <style>
+
+      h1 {text-align:center;font-family: 'Nixie One', cursive;}
+      body {
+          font-family: 'Varela Round', sans-serif;
+          font-size: 14px;
+      }
+  </style>
 </head>
 <body>
 
@@ -32,11 +40,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <a class="navbar-brand" href="/projects">Project name</a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><%= link_to 'TODO', tasks_path %></li>
+        <li><%= link_to 'TODO', tasks_path %></li>
         <li><%= link_to 'DOING', tasks_path %></li>
         <li><%= link_to 'DONE', tasks_path %></li>
         <li class="dropdown">
