--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing projects</h1>
+<h1 class="page-header">My Projects</h1>
 
-<table>
+<!--<table>
   <thead>
     <tr>
       <th>Name</th>
@@ -24,8 +24,36 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+</table>-->
 
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+  <div class="row placeholders">
+    <div class="col-xs-6 col-sm-3 btn-link center-block">
+      <a href="/tasks?section_id=4">
+        <img src=" /assets/pic.png " width="107" height="58">
+        <h4>IT-Tiful</h4>
+      </a>
+    </div>
+    <div class="col-xs-6 col-sm-3 btn-link center-block">
+      <a href="/tasks?section_id=3">
+        <img src=" /assets/pic.png " width="107" height="58">
+        <h4>IT-Opreting</h4>
+      </a>
+    </div>
+    <div class="col-xs-6 col-sm-3 btn-link center-block">
+      <a href="/tasks?section_id=2">
+        <img src=" /assets/pic.png " width="107" height="58">
+        <h4>IT-Stotage</h4>
+      </a>
+    </div>
+    <div class="col-xs-6 col-sm-3 btn-link center-block">
+      <a href="/tasks?section_id=1">
+        <img src=" /assets/pic.png " width="107" height="58">
+        <h4>IT-SystemNt</h4>
+      </a>
+    </div>
+  </div>
+</div>
 <br>
 
-<%= link_to 'New Project', new_project_path %>
+<%= link_to 'My Projects', projects_path %>
