--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -14,7 +14,7 @@
 
       <div class="field">
         <%= f.label :title %><br>
-        <textarea type="text" name="task[title]" class="form-control" required autofocus></textarea>
+        <textarea type="text" name="task[title]" class="form-control" required autofocus><%= @task.title %></textarea>
       </div>
       <div class="field" class="width-size2">
         <%= f.label :priority %><br>
@@ -30,9 +30,22 @@
 
         <textarea type="text" name="task[description]" class="form-control" required></textarea>
       </div>
+
+        <div class="field">
+          <%= f.label :project_name %><br>
+
+          <textarea type="text" name="task[project_name]" class="form-control" required></textarea>
+        </div>
+
+        <div class="field">
+          <%= f.label :assignee %><br>
+
+          <textarea type="text" name="task[assignee]" class="form-control" required></textarea>
+        </div>
+
       <div class="field">
         <%= f.label :status %><br>
-        <select name="task[status]" class="form-control"  >
+        <select name="task[status]" class="form-control">
           <option value="TODO">TODO</option>
           <option value="DOING">DOING</option>
           <option value="DONE">DONE</option>
@@ -42,10 +55,19 @@
       <div class="field">
         <%= f.label :due_date %><br>
         <%= f.date_select :due_date %>
-      </div>
+      </div >
+       <div class="field">
+         <label>Created by</label><br>
+
+         <%= collection_select(:task, :user_id, User.all, :id, :full_name) %>
+         <!--<f.input :user_id, collection: User.all  %>-->
+         <!--<textarea type="text" name="task[user_id]" class="form-control" required></textarea>-->
+
+       </div>
       <div class="actions">
         <p>
           <%= f.submit(:class=>"btn btn-lg btn-primary",:href=>"../../components/#navbar" ,:role => "button") %>
+
         </p>
       </div>
     <% end %>
