--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,8 +10,11 @@
         <th>Title</th>
         <th>Priority</th>
         <th>Description</th>
+        <th>Project Name</th>
+        <th>Assignee</th>
         <th>Status</th>
         <th>Due date</th>
+        <th>Created by</th>
         <th></th>
         <th></th>
         <th></th>
@@ -24,8 +27,11 @@
                 <td><%= task.title %></td>
                 <td><%= task.priority %></td>
                 <td><%= task.description %></td>
+                <td><%= task.project_name %></td>
+                <td><%= task.assignee %></td>
                 <td><%= task.status %></td>
                 <td><%= task.due_date %></td>
+                <td><%= task.user.full_name %></td>
                 <!--<td>|</td>-->
                 <td><%= link_to time_ago_in_words(task.created_at) + " ago", task %></td>
                <!-- <td class="admin">|</td>-->
