fixed tasks. still working on sort.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SadnaApp</title>
+  <title>SadnaApp | <%= @page_title %></title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -40,7 +40,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/projects">Project name</a>
+      <a class="navbar-brand" href="/projects">Project name </a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -84,6 +84,7 @@
     </div><!--/.nav-collapse -->
   </div>
 </div>
+
 <!-- asdasdasd -->
 <div class="container">
   <!--p class="notice"><%= notice %></p>
