--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -2,11 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
 .task .admin{
   display: none;
 }
 .task.hover .admin{
-  display: inline;
+  display: table-cell;
 }
 
 .task.hover{
