--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -28,7 +28,7 @@
                 <td><%= task.priority %></td>
                 <td><%= task.description %></td>
                 <td><%= task.project_name %></td>
-                <td><%= task.assignee %></td>
+                <td><%= task.user.full_name %></td>
                 <td><%= task.status %></td>
                 <td><%= task.due_date %></td>
                 <td><%= task.user.full_name %></td>
