fix link from project to task

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -57,9 +57,10 @@
   </div>
 </div>
 
-<div class = "actions">
+<br>
+<!--<div class = "actions">
   <%= link_to("it operating", {:controller => 'tasks', :project_id => '2'}) %>
 </div>
 <br>
 
-<%= link_to 'My Projects', projects_path %>
+<%= link_to 'My Projects', projects_path %>-->
