--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,6 +11,7 @@
         <th>Priority</th>
         <th>Description</th>
         <th>Project Name</th>
+        <th hidden="hidden">Project Id </th>
         <th>Assignee</th>
         <th>Status</th>
         <th>Due date</th>
@@ -28,6 +29,7 @@
                 <td><%= task.priority %></td>
                 <td><%= task.description %></td>
                 <td><%= task.project_name %></td>
+                <td hidden="hidden"><%= task.project_id %></td>
                 <td><%= task.user.full_name %></td>
                 <td><%= task.status %></td>
                 <td><%= task.due_date %></td>
