--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,7 +4,7 @@
 
 
 <div class="table-responsive">
-  <table class="table table-striped">
+  <table id="myTable" class="table table-striped tablesorter">
       <thead>
       <tr>
         <th>Title</th>
@@ -16,8 +16,8 @@
         <th>Status</th>
         <th>Due date</th>
         <th>Created by</th>
-        <th></th>
-        <th></th>
+        <th>When</th>
+
       </tr>
       </thead>
 
