--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -3766,6 +3766,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   padding-top: 10px;
   padding-bottom: 10px;
   line-height: 20px;
+  margin-left: 5px;
 }
 @media (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
