--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -29,7 +29,7 @@
                 <td><%= task.description %></td>
                 <td><%= task.project_name %></td>
                 <td hidden="hidden"><%= task.project_id %></td>
-                <td><%= task.user.full_name %></td>
+                <td><%= task.doer.full_name %></td>
                 <td><%= task.status %></td>
                 <td><%= task.due_date %></td>
                 <td><%= task.user.full_name %></td>
