--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,15 +40,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/projects">Project name </a>
+      <a class="navbar-brand" href="/projects">All Projects</a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li><%= link_to 'TODO', tasks_path %></li>
         <li><%= link_to 'DOING', tasks_path %></li>
         <li><%= link_to 'DONE', tasks_path %></li>
-        <li class="dropdown">
-          <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">SORT<b class="caret"></b></a>
+        <!--<li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">SORT<b class="caret"></b></a>
           <ul class="dropdown-menu">
            <li><a href="#">High To Low</a></li>
            <li><a href="#">Low To High</a></li>
@@ -57,10 +57,18 @@
           <li class="divider"></li>
            <li class="dropdown-header">Nav header</li>
            <li><a href="#">Separated link</a></li>
-           <li><a href="#">One more separated link</a></li>-->
+           <li><a href="#">One more separated link</a></li>
           </ul>
+        </li>-->
+        <li>
+          <%= link_to 'New Task', new_task_path ,:class =>"btn btn-primary btn-default", :role => "button",id:"menu_new_task"  %>
         </li>
-        <%= link_to 'New Task', new_task_path ,:class =>"btn btn-primary btn-default active ", :role => "button" %>
+        <li>
+          <%= link_to 'Assigned To Me', new_task_path ,:class =>"btn btn-success btn-default", :role => "button",id:"menu_assigned_to_me"  %>
+        </li>
+        <li>
+          <%= link_to 'Created By Me', new_task_path ,:class =>"btn btn-info btn-default", :role => "button",id:"menu_created_by_me"  %>
+        </li>
       </ul>
 
       <ul class="nav pull-right" id="login">
