--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -17,7 +17,12 @@
 
 <p>
   <strong>Project Name:</strong>
-  <%= @task.project_name %>
+  <%= @task.project.projectName %>
+</p>
+
+<p>
+  <strong>Project Id:</strong>
+  <%= @task.project_id %>
 </p>
 
 <p>
