--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,28 +1,30 @@
 /* tables */
 table.tablesorter {
-	margin:10px 0pt 15px;
+	margin:10px 2pt 15px;
 	font-size: 8pt;
-	width: 100%;
 	text-align: left;
+    width: 100%;
+    border: 1px solid #d0e9c6;
 
 }
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
-	background-color: #285e8e;
-    color: #ffffff;
-	border: 1px solid #FFF;
+	background-color: #999999;
+    color: #2E2F30;
+	border: 1px solid #d0e9c6;
 	font-size: 10pt;
-	padding: 4px;
-
+    padding: 4px;
 }
 table.tablesorter thead tr .header {
 	background-image: url(bg.gif);
+    border-bottom-width: 0px;
 	background-repeat: no-repeat;
 	background-position: center right;
 	cursor: pointer;
 }
+
 table.tablesorter tbody td {
-	color: #3D3D3D;
-	padding: 4px;
+	color: #2b542c;
+	padding: 5px;
 	background-color: #FFF;
 	vertical-align: top;
 }
