--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -33,13 +33,7 @@
 
         <div class="field">
           <%= f.label :project_name %><br>
-          <select name="task[project_name]" class="form-control">
-            <option value="IT-SystemNt">IT-SystemNt</option>
-            <option value="IT-Storage">IT-Storage</option>
-            <option value="IT-Opreting">IT-Opreting</option>
-            <option value="IT-Tiful">IT-Tiful</option>
-          </select>
-         <!-- <textarea type="text" name="task[project_name]" class="form-control" required></textarea>-->
+             <%= f.collection_select(:project_id , Project.all, :id, :name) %>
         </div>
 
 
