--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,9 +16,11 @@
     <%= f.password_field :password %></div>
 
   <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %></div>
+    <%= f.password_field :password_confirmation %></div><br />
 
-  <div><%= f.submit "Sign up" %></div>
+    <!--<div><%= f.submit "Sign up" %></div>-->
+  <div><%= f.submit(:class=>"btn btn-lg btn-primary",:href=>"../../components/#navbar" ,:role => "button") %></div>
+
 <% end %>
 
 <%= render "devise/shared/links" %>
