--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,42 +1,40 @@
 /* tables */
 table.tablesorter {
-	margin:10px 2pt 15px;
-	font-size: 8pt;
-	text-align: left;
+    margin:10px 0pt 15px;
+    font-size: 8pt;
     width: 100%;
-    border: 1px solid #d0e9c6;
+    text-align: left;
 
 }
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
-	background-color: #999999;
-    color: #2E2F30;
-	border: 1px solid #d0e9c6;
-	font-size: 10pt;
+    background-color: #357ebd;
+    color: #ffffff;
+    border: 1px solid #FFF;
+    font-size: 10pt;
     padding: 4px;
+
 }
 table.tablesorter thead tr .header {
-	background-image: url(bg.gif);
-    border-bottom-width: 0px;
-	background-repeat: no-repeat;
-	background-position: center right;
-	cursor: pointer;
+    background-image: url(bg.gif);
+    background-repeat: no-repeat;
+    background-position: center right;
+    cursor: pointer;
 }
-
 table.tablesorter tbody td {
-	color: #2b542c;
-	padding: 5px;
-	background-color: #FFF;
-	vertical-align: top;
+    color: #3D3D3D;
+    padding: 4px;
+    background-color: #FFF;
+    vertical-align: top;
 }
 table.tablesorter tbody tr.odd td {
-	background-color:#F0F0F6;
+    background-color:#F0F0F6;
 }
 table.tablesorter thead tr .headerSortUp {
-	background-image: url(asc.gif);
+    background-image: url(asc.gif);
 }
 table.tablesorter thead tr .headerSortDown {
-	background-image: url(desc.gif);
+    background-image: url(desc.gif);
 }
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-background-color: #8dbdd8;
+    background-color: #8dbdd8;
 }
