--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <!-- Bootstrap core CSS -->
   <%= stylesheet_link_tag    "bootstrap.css" %>
-
+  <%= stylesheet_link_tag    "datepicker.css" %>
 
   <!-- Custom styles for this template -->
   <%= stylesheet_link_tag "site.css" %>
@@ -106,6 +106,7 @@
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <%= javascript_include_tag "jquery.tablesorter.js" %>
 <%= javascript_include_tag "bootstrap.min.js" %>
+<%= javascript_include_tag "bootstrap-datepicker.js" %>
 
 
 </body>
