--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -38,7 +38,7 @@
     <div class="col-xs-6 col-sm-3 btn-link center-block">
       <a href="/tasks?project_id=1">
         <img src=" /assets/pic.png " width="107" height="58">
-        <h4>IT-Opreting</h4>
+        <h4>IT-Operating</h4>
       </a>
     </div>
     <div class="col-xs-6 col-sm-3 btn-link center-block">
