--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -53,9 +53,12 @@
 
       </div>
       <div class="field">
+
         <%= f.label :due_date %><br>
-        <%= f.date_select :due_date %>
+        <%= f.text_field :due_date, :id=>"date" %>
+        <!--<textarea type="text" name="task[title]" class="form-control" id="date" required autofocus><%= @task.due_date  %></textarea>-->
       </div >
+
        <div class="field">
          <label>Created by</label><br>
 
